# Shorts-Factory-Backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.agent/project/: CODE_STYLE.md  PRODUCT_VISION.md  PROJECT_CONTEXT.md
.github/workflows/: deploy_vps.yml
alembic/: env.py
alembic/versions/: 001_create_stage1_tables.py  002_add_publish_log_metadata.py
docs/: CREATIVE_RETENTION_AUDIT.md  DEPLOYMENT.md  GITHUB_PR_WORKFLOW.md  PRODUCT_VISION.md  ROADMAP.md  TEST_COVERAGE_PLAN.md
scripts/: deploy_vps_shorts_factory.sh
shorts_factory/: logging_config.py  main.py  runtime.py  settings.py
shorts_factory/api/: health.py  jobs.py
shorts_factory/db/: models.py  repositories.py  session.py
shorts_factory/dev/: __init__.py  local_e2e.py  offline_providers.py
shorts_factory/generation/: image_generator.py  image_prompt_builder.py  image_style_contract.py  metadata_generator.py  schemas.py  script_generator.py  voice_generator.py  voiceover_script.py
shorts_factory/jobs/: retry_policy.py  scheduler.py  worker.py
shorts_factory/publishing/: publish_service.py  telegram_publisher.py  youtube_publisher.py
shorts_factory/quiz_bank/: adapter.py  client.py  schemas.py
shorts_factory/rendering/: ffmpeg_renderer.py  production_templates.py  qa_probe.py  render_plan.py  text_overlay.py
shorts_factory/storage/: asset_paths.py  local_storage.py
tests/: test_generation_contracts.py  test_health.py  test_jobs_api.py  test_local_e2e.py  test_offline_e2e_runtime.py  test_openai_adapters.py  test_openai_media_adapters.py  test_openai_voice_adapter.py  test_production_templates.py  test_publish_service_guards.py  test_publishing.py  test_quiz_bank.py  test_quiz_bank_delivery.py  test_quiz_bank_worker_failures.py  test_quiz_bank_worker_smoke.py  test_rendering_audio_command.py  test_rendering_qa.py  test_rendering_subprocess.py  test_rendering_voiceover_qa_edges.py  test_retry_policy.py  test_settings.py  test_text_overlay.py  test_video_qa_boundaries.py  test_video_qa_metadata.py  test_voice_generator_failures.py  test_voiceover_audio.py  test_voiceover_render_audio.py  test_voiceover_render_integration.py  test_voiceover_script_edges.py  test_youtube_publisher_errors.py  test_youtube_publishing.py  worker_smoke_support.py
