[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "shorts-factory-backend"
version = "0.1.0"
description = "Backend service for generating German quiz shorts from Quiz Bank content."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.115",
    "httpx>=0.27",
    "openai>=2.0",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["shorts_factory"]

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--cov=shorts_factory",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=85",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["shorts_factory"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
